# GhostSpeak

./: .dockerignore  .env.backup  .env.example  .env.vercel.production  .gitignore  .vercelignore  .verification-log.json  AGENT_ARCHITECTURE.md  AGENT_COMMUNICATION_ENHANCEMENTS.md  AGENT_ENDPOINT_GAP_ANALYSIS.md  ANZA_TOOLING_ANALYSIS.md  ARCHITECTURE.md  Anchor.toml  B2B_API_ARCHITECTURE.md  B2B_API_COMPLETION_REPORT.md  B2B_API_IMPLEMENTATION_SUMMARY.md  B2B_API_QUICK_START.md  B2B_BILLING_IMPLEMENTATION.md  BLIND_VIBE_CI_FIX.md  CHANGELOG.md  CLAUDE.md  CODEBASE_AUDIT_REPUTATION_ORACLE.md  COMPREHENSIVE-PLATFORM-HEALTH-REPORT.md  COMPREHENSIVE_E2E_TEST_REPORT.md  COMPREHENSIVE_END_TO_END_INTEGRATION_REPORT.md  COMPREHENSIVE_INTEGRATION_REPORT.md  COMPREHENSIVE_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_SMART_CONTRACT_VALIDATION_REPORT.md  COMPREHENSIVE_TESTING_GUIDE.md  CONVEX_AUDIT_REPORT.md  CONVEX_FIX_COMPLETE.md  CREDENTIALS_SETUP_COMPLETE.md  CREDENTIALS_SYSTEM_COMPLETE.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  (+177 more)
.claude/: AUTONOMOUS_CONFIGURATION.md  CLAUDE.md  DEVELOPER_GUIDE.md  DEVNET_DEPLOYMENT.md
.cursor/: KLUSTER_MCP_GUIDE.md  kluster-config.json
.githooks/: pre-commit
.github/: CI_CD_GUIDE.md
.next/: prerender-manifest.json  trace
config/: README.md  program-ids.ts  security-config.ts  token-config.ts
docs/: API.md  (+51 more)
programs/fuzz/: Cargo.toml
programs/fuzz/fuzz_targets/: fuzz_register_agent.rs  fuzz_reputation_calc.rs  fuzz_x402_payment.rs
(+938 files in other folders)
